# jarvis-voice-agent

./: .env.example  .gitignore  Makefile  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PHASE2_VERIFICATION.md  PHASE4_CHECKLIST.md  PHASE4_COMPLETION_REPORT.md  PHASE4_DEPLOYMENT.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_README.md  PHASE5_COMPLETION_REPORT.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_QUICK_REFERENCE.md  PHASE5_README.md  PHASE6_DASHBOARD_COMPLETION_REPORT.md  PHASE6_DASHBOARD_README.md  README.md  verify-phase1.bat  verify-phase1.sh
dashboard/: .env.example  Dockerfile  nginx.conf  package.json
dashboard/public/: index.html
dashboard/src/: App.tsx  index.css
docs/: PHASE2_COMPLETION.md
docs/architecture/: README.md
docs/security/: security_model.md
infra/: docker-compose.yml  init-db.sql
infra/scripts/: setup.bat  setup.sh
protos/: tool.proto  voice.proto  web.proto
services/agent-core/: .gitignore  API_EXAMPLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  config.py  docker-compose.yml  generate_protos.sh  requirements.txt  start.bat  start.sh
services/api-gateway/: README.md  requirements.txt
services/memory-service/: .env.template  Dockerfile  README.md  config.py  requirements.txt  (+2 more)
services/tool-executor/: Cargo.toml  Dockerfile  README.md  build.rs  generate_proto.sh
services/tool-executor/config/: security.yaml
services/tool-executor/src/: main.rs
services/tool-executor/src/executors/: file_ops.rs  mod.rs  system_cmd.rs
services/tool-executor/src/grpc/: mod.rs  server.rs
services/tool-executor/src/security/: allowlist.rs  mod.rs  validator.rs
services/voice-gateway/: Cargo.toml  Dockerfile  README.md  build.rs
services/voice-gateway/src/: main.rs  orchestrator.rs
services/voice-gateway/src/audio/: mod.rs  processor.rs  stream.rs
services/voice-gateway/src/grpc/: mod.rs  server.rs
services/voice-gateway/src/wake_word/: detector.rs  mod.rs
(+102 files in other folders)
