[package]
name = "tool-executor"
version = "0.1.0"
edition = "2021"
authors = ["Voice AI Agent Team"]
description = "Sandboxed tool execution service with security controls"

[dependencies]
# gRPC
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }

# Sandboxing
nix = { version = "0.28", features = ["process", "signal", "user"] }
caps = "0.5"  # Linux capabilities

# Process execution
tokio-process = "0.2"

# Security
seccompiler = "0.4"  # Syscall filtering

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting
governor = "0.6"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "tool-executor"
path = "src/main.rs"
