[package]
name = "voice-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Voice AI Agent Team"]
description = "Voice gateway service for audio streaming and wake-word detection"

[dependencies]
# gRPC
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Audio processing
cpal = "0.15"  # Cross-platform audio I/O
hound = "3.5"  # WAV encoding/decoding

# Wake-word detection
openwakeword = { git = "https://github.com/dscripka/openWakeWord", optional = true }

# WebSocket
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "voice-gateway"
path = "src/main.rs"

[features]
default = []
wake-word = ["openwakeword"]
